--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
             android:name=".View.GameActivity"
             android:exported="false" />
         <activity
+            android:name=".View.ShopActivity"
+            android:exported="false">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".View.MainActivity"
             android:exported="true">
             <intent-filter>
